--- a/templates/acronyms.tex
+++ b/templates/acronyms.tex
@@ -39,15 +39,18 @@
 \newacronym{ngds}{NGDS}{National Geothermal Data System}
 \newacronym{nmfk}{NMFk}{Non-negative Matrix Factorization \& k-means Clustering}
 \newacronym{nm}{NM}{New Mexico}
+\newacronym{nn}{NN}{Neural Network}
 \newacronym{nrel}{NREL}{National Renewable Energy Laboratory}
 \newacronym{ovo}{OvO}{One versus One}
 \newacronym{ovr}{OvR}{One versus Rest}
 \newacronym{opec}{OPEC}{Organization of the Petroleum Exporting Countries}
 \newacronym{pca}{PCA}{Principle Component Analysis}
 \newacronym{pfa}{PFA}{Play Fairway Analysis}
+\newacronym{relu}{ReLU}{Rectified Linear Unit}
 \newacronym{rfe}{RFE}{Recursive Feature Elimination}
 \newacronym{rgr}{RGR}{Rio Grande Rift}
 \newacronym{roc}{ROC}{Receiver Operating Characteristic}
+\newacronym{shap}{SHAP}{Shapley Additive Explanation}
 \newacronym{tn}{TN}{True Negative}
 \newacronym{tp}{TP}{True Positive}
 \newacronym{tpr}{TPR}{True Positive Rate}
