--- a/templates/chap3.tex
+++ b/templates/chap3.tex
@@ -32,7 +32,7 @@ The data sets imported into ArcGIS or Python scripts for feature preparation req
 
 \subsubsection{Subsampling}\label{ssn:fishnet}
 
-Machine learning models generally treat data as a matrix of observations. The concept of a geospatial dataframe follows this paradigm, where each row represents a discrete location specified in latitude and longitude columns, and all other columns contain feature values for that location. Since the area outlined by the study AOI covers 97,469 km$^2$, and each location is described by 25 features and 2 map coordinates, the matrix of the study area at 1 km$^2$ resolution would be of size 2,631,663 values. However, exploration typically does not require this level of granularity. Also, the time complexity of many machine learning methods grows at a non-linear rate with data size, e.g., the decision tree model discussed in Section \ref{ch5:decision_trees} has O(m\,n\,log$_{2}$n) complexity, where n is the number of observations and m is the number of features \citep{sani_computational_2018}. As such, a coarser resolution of $0.025^\circ$ ($\sim$2.5 km on average across the AOI) was selected as a manageable subsampling interval for this study. The ArcGIS \textit{Create Fishnet} tool generated a $0.025^\circ$ x $0.025^\circ$ mesh that, when constrained to the AOI polygon, consists of 15,137 point locations (Figure \ref{fig:fishnet}). Data preparation steps use this fishnet point set where noted in Section \ref{ch3:layers}, and final model predictions are made on these points to allow for direct comparison between different model results. 
+Machine learning models generally treat data as a matrix of observations. The concept of a geospatial dataframe follows this paradigm, where each row represents a discrete location specified in latitude and longitude columns, and all other columns contain feature values for that location. Since the area outlined by the study AOI covers 97,469 km$^2$, and each location is described by 25 features and 2 map coordinates, the matrix of the study area at 1 km$^2$ resolution would be of size 2,631,663 values. However, exploration typically does not require this level of granularity. Also, the time complexity of many machine learning methods grows at a non-linear rate with data size, e.g., the decision tree model discussed in Section \ref{ch5:decision_trees} has O(m\,n\,log$_{2}$n) complexity, where n is the number of observations and m is the number of features \citep{sani_computational_2018}. As such, a coarser resolution of $0.025^\circ$ ($\approx$2.5 km on average across the AOI) was selected as a manageable subsampling interval for this study. The ArcGIS \textit{Create Fishnet} tool generated a $0.025^\circ$ x $0.025^\circ$ mesh that, when constrained to the AOI polygon, consists of 15,137 point locations (Figure \ref{fig:fishnet}). Data preparation steps use this fishnet point set where noted in Section \ref{ch3:layers}, and final model predictions are made on these points to allow for direct comparison between different model results. 
 
 \begin{figure}[htp]
 \centering
@@ -415,16 +415,16 @@ Feature maps spanning the entire AOI provide the primary resource for creating a
 \label{fig:data_augmentation}
 \end{wrapfigure}
 
-Noting that the AOI under investigation spans over 97,000 km$^2$, the relatively small size of the WDS raises concern over whether enough data is available to provide well-established data-driven insights using supervised learning methods. If predictions are reduced to just locations within the fishnet point set, there is still 2 orders of magnitude difference between ground truth observations and the points being predicted, exacerbated further by the need to partition the input data into one subset for training and two others for model validation and testing \citep[e.g.,][~p. 222]{hastie_elements_2009}. 
+Noting that the AOI under investigation spans over 97,000 km$^2$, the relatively small size of the WDS raises concern over whether enough data is available to provide well-established data-driven insights using supervised learning methods. If predictions are reduced to just locations within the fishnet point set, there is still 2 orders of magnitude difference between ground truth observations and the points being predicted, exacerbated further by the need to partition the input data into one subset for training and two others for model validation and testing \citep[e.g.,][p.\ 222]{hastie_elements_2009}. 
 
-Data augmentation methods attempt to boost the size of a sparse input data set by using basic assumptions or heuristics to create additional input points. This study applies the concept of spatial autocorrelation at the heart of variography and kriging methods; in geography, all things are related, but the correlation increases as the spatial distance decreases \citep[~chap. 13]{gimond_intro_2021}. For each well location in the WDS, an additional four points were placed to the north, south, east, and west by adding or subtracting a constant 0.01$^\circ$ to each well’s geographic coordinates (Figure \ref{fig:data_augmentation}). Feature values were extracted from the layer maps in ArcGIS at these “pseudowell” locations. For the geothermal gradient, an interpolation layer was created using the ArcGIS \textit{Kriging} function with spherical variogram, auto-determined lag size of 0.097, and variable search radius with 12-point requirement. Gradient values were extracted from this layer for each pseudowell. The use of an interpolated gradient layer avoided conflict between pseudowells from close-proximity real well locations, where the direct assignment of the original well gradient values to step-out pseudowells would create an inconsistent augmented data set due to overlap. This overall workflow generated a new data set with 2,995 observations within the study AOI, referred to as WDS4. 
+Data augmentation methods attempt to boost the size of a sparse input data set by using basic assumptions or heuristics to create additional input points. This study applies the concept of spatial autocorrelation at the heart of variography and kriging methods; in geography, all things are related, but the correlation increases as the spatial distance decreases \citep[chap.\ 13]{gimond_intro_2021}. For each well location in the WDS, an additional four points were placed to the north, south, east, and west by adding or subtracting a constant 0.01$^\circ$ to each well’s geographic coordinates (Figure \ref{fig:data_augmentation}). Feature values were extracted from the layer maps in ArcGIS at these “pseudowell” locations. For the geothermal gradient, an interpolation layer was created using the ArcGIS \textit{Kriging} function with spherical variogram, auto-determined lag size of 0.097, and variable search radius with 12-point requirement. Gradient values were extracted from this layer for each pseudowell. The use of an interpolated gradient layer avoided conflict between pseudowells from close-proximity real well locations, where the direct assignment of the original well gradient values to step-out pseudowells would create an inconsistent augmented data set due to overlap. This overall workflow generated a new data set with 2,995 observations within the study AOI, referred to as WDS4. 
 
 Extending this method further, a second augmented data set placed pseudowells to the NE, SE, NW, and SW as well, resulting in eight pseudowells for every original well in the WDS (Figure \ref{fig:data_augmentation}). Restricting the results to the AOI, this produced a data set with 5,386 observations (WDS8) for use in training and testing of machine learning models.
 
 \subsubsection{Data Exploration}
 The comprehensive coverage of the FDS makes it an appealing data set to use for exploring the attributes and relationships of the 25 data layers. Although care was taken to ensure each layer fully spanned the AOI, a search for missing values identified 163 \acrshort{nan}s (not a number, i.e., unassigned values) among the features. The corresponding rows plot along the study area boundary and likely represent places where one or more data layers ended just short of the fishnet point locations. These rows were dropped from the overall data set, reducing its size to 15,007 records.
 
-Histograms offer insights into the data distribution for the predictor variables. Based on Figure \ref{fig:unscaled_hists}, only the magnetic anomaly layer has the appearance of a zero-mean Gaussian distribution. All other variables are offset and skewed to some extent. Many statistical tools rely on the assumption of normally-distributed random variables, so skewness can be problematic for modeling \citep[~p. 85]{montgomery_statistical_2012}.  These results suggest variable scaling and transformations will be a useful part of data preparation \citep[~p. 221]{montgomery_statistical_2012}. 
+Histograms offer insights into the data distribution for the predictor variables. Based on Figure \ref{fig:unscaled_hists}, only the magnetic anomaly layer has the appearance of a zero-mean Gaussian distribution. All other variables are offset and skewed to some extent. Many statistical tools rely on the assumption of normally-distributed random variables, so skewness can be problematic for modeling \citep[p.\ 85]{montgomery_statistical_2012}.  These results suggest variable scaling and transformations will be a useful part of data preparation \citep[p.\ 221]{montgomery_statistical_2012}. 
 
 \begin{figure}[!htp]
 \centering
@@ -433,7 +433,7 @@ Histograms offer insights into the data distribution for the predictor variables
 \label{fig:unscaled_hists}
 \end{figure}
 
-Scatter plots between variables can highlight collinear behavior where a close relationship between two predictors creates uncertainty in their balance, that is, their individual contributions to the response variable \citep[~p. 99]{james_introduction_2013}. This can reduce the accuracy of model parameters like regression coefficients, impact the statistical significance of predictors, and lead to overly complex models \citep[~p. 100-101]{james_introduction_2013}. Figure \ref{fig:unscaled_scatter} illustrates all permutations of feature pairwise relationships. Although individual plots are too small to appreciate in detail, the overall shapes of the plots suggests some linear behavior between a handful of variables. The inset maps illustrate two examples of collinearity, and the third shows how skewness in variable distributions makes it difficult to discern some feature relationships.
+Scatter plots between variables can highlight collinear behavior where a close relationship between two predictors creates uncertainty in their balance, that is, their individual contributions to the response variable \citep[p.\ 99]{james_introduction_2013}. This can reduce the accuracy of model parameters like regression coefficients, impact the statistical significance of predictors, and lead to overly complex models \citep[p.\ 100-101]{james_introduction_2013}. Figure \ref{fig:unscaled_scatter} illustrates all permutations of feature pairwise relationships. Although individual plots are too small to appreciate in detail, the overall shapes of the plots suggests some linear behavior between a handful of variables. The inset maps illustrate two examples of collinearity, and the third shows how skewness in variable distributions makes it difficult to discern some feature relationships.
 
 \begin{figure}[!htp]
 \centering
@@ -480,7 +480,7 @@ Scaling and transformation also impacts the variable pairwise scatter plots. Fig
 \end{figure}
 
 \subsubsection{Feature Correlation}\label{ch3:feat_corr}
-Another way to evaluate collinearity between two features is to calculate their correlation coefficient. The standard Pearson correlation coefficient ($r$) is strictly defined as the covariance between two variables, scaled by the product of their standard deviations. On a per-sample basis, this becomes \citep[~p. 70]{james_introduction_2013}:
+Another way to evaluate collinearity between two features is to calculate their correlation coefficient. The standard Pearson correlation coefficient ($r$) is strictly defined as the covariance between two variables, scaled by the product of their standard deviations. On a per-sample basis, this becomes \citep[p.\ 70]{james_introduction_2013}:
 
 \begin{equation}
     r = \frac{\Sigma(x_i-\bar{x})(y_i-\bar{y})}{\sqrt{\Sigma{(x_i-\bar{x})^2} \Sigma{(y_i-\bar{y})^2}}}
@@ -539,9 +539,9 @@ Preparation of well data sets WDS, WDS4, and WDS8 first involved removing record
 
 \subsubsection{Stratified Sampling} \label{ch3:strat_sample}
 
-Supervised machine learning models determine the attributes of a predictive model based on the input data provided during training. In approximating the target function, i.e., the response variable, the models seek to minimize an objective function as much as possible. The pitfall here lies in the representativeness of the training data set; if a model exactly matches the input data, it may not generalize well to other unseen observations. This would be a high variance model, meaning the model predictions are strongly coupled to the characteristics of the training data. Variance trades off with model bias, which includes simplifying assumptions on the form of the target function. The bias-variance trade-off is a core concept in machine learning \citep[~p. 33-36]{james_introduction_2013} and drives many of the model decisions made within this thesis.
+Supervised machine learning models determine the attributes of a predictive model based on the input data provided during training. In approximating the target function, i.e., the response variable, the models seek to minimize an objective function as much as possible. The pitfall here lies in the representativeness of the training data set; if a model exactly matches the input data, it may not generalize well to other unseen observations. This would be a high variance model, meaning the model predictions are strongly coupled to the characteristics of the training data. Variance trades off with model bias, which includes simplifying assumptions on the form of the target function. The bias-variance trade-off is a core concept in machine learning \citep[p.\ 33-36]{james_introduction_2013} and drives many of the model decisions made within this thesis.
 
-One method of reining in the high variance overfitting problem involves splitting the input data set into training and testing subsets. Model fitting uses the training set, while model evaluation relies on the test set. An additional split of the testing subset into separate validation and testing sets allows a modeler to validate model parameter choices with validation data not seen during model training, but then conduct a final model evaluation using completely unseen test data \citep[~p. 222]{hastie_elements_2009}. Creating such firm boundaries between seen and unseen data helps prevent the issue of data leakage.  Fundamentally, if a model trains or is tuned on data used to evaluate its performance, that evaluation no long reflects real world predictive ability because information from the evaluation data has already “leaked” into the model \citep{kaufman_leakage_2012}. When data leakage occurs, model performance after deployment will likely not match that seen during testing. In other words, it won’t be as good a model as the modeler thinks it is.
+One method of reining in the high variance overfitting problem involves splitting the input data set into training and testing subsets. Model fitting uses the training set, while model evaluation relies on the test set. An additional split of the testing subset into separate validation and testing sets allows a modeler to validate model parameter choices with validation data not seen during model training, but then conduct a final model evaluation using completely unseen test data \citep[p.\ 222]{hastie_elements_2009}. Creating such firm boundaries between seen and unseen data helps prevent the issue of data leakage.  Fundamentally, if a model trains or is tuned on data used to evaluate its performance, that evaluation no long reflects real world predictive ability because information from the evaluation data has already “leaked” into the model \citep{kaufman_leakage_2012}. When data leakage occurs, model performance after deployment will likely not match that seen during testing. In other words, it won’t be as good a model as the modeler thinks it is.
 
 For classification problems, randomly splitting input data set into 3 subsets will violate the balance between class proportions in the original input data. Fortunately, sampling techniques exist that preserve the relative fractions of each class in the derivative subsets. Scikit-learn provides the \textit{StratifiedShuffleSplit} method for randomly sampling from each class subgroup to generate training, validation, and test sets that look like one another and the original complete data set \citep{scikit-learn_sklearnmodel_selectionstratifiedshufflesplit_2021}. The FDS, WDS, WDS4, and WDS8 data sets were each partitioned into 70\% training, 15\% validation, 15\% testing using this method. Table \ref{tab:stratified_split_counts} lists raw counts of observations associated with each class bucket and describes how class proportions compare across the different data sets.
 
