--- a/templates/zotero.bib
+++ b/templates/zotero.bib
@@ -1,4 +1,126 @@
 
+@techreport{eia_international_2020,
+	title = {International {Energy} {Outlook} 2020 ({IEO2020})},
+	url = {https://www.eia.gov/outlooks/ieo/},
+	abstract = {Most economic growth happens in non-OECD countries, where GDP per person nearly triples from 2018 to 2050 Most energy-intensive manufacturing shifts to non-OECD Asia and, increasingly, to India The industrial sector is the largest consumer of energy, and energy-intensive manufacturing is the largest component in the sector Manufacturing centers are shifting toward Africa and South Asia, especially India, resulting in energy consumption growth Energy-intensive manufacturing gross output 1 by region share End-use energy consumption by sector quadrillion British thermal units Energy consumption by industrial subsector quadrillion British thermal units Average annual percentage change in GDP (gross domestic product), 2018-2050 percentage per year 0\% 25\% 50\% 75\%},
+	institution = {Government Printing Office},
+	author = {{EIA}},
+	year = {2020},
+	note = {US Energy Information Administration
+Publication Title: International Energy Outlook
+Volume: 2020},
+	pages = {1--7},
+}
+
+@techreport{anderson_national_2013,
+	title = {National {Geothermal} {Data} {System} ({Ngds}) {Geothermal} {Data} {Domain}: {Assessment} {Of} {Geothermal} {Community} {Data} {Needs}},
+	shorttitle = {{NATIONAL} {GEOTHERMAL} {DATA} {SYSTEM} ({NGDS}) {GEOTHERMAL} {DATA} {DOMAIN}},
+	url = {https://www.osti.gov/biblio/1130333},
+	abstract = {The U.S. Department of Energy's Office of Scientific and Technical Information},
+	language = {English},
+	urldate = {2021-06-04},
+	institution = {Boise State Univ., ID (United States)},
+	author = {Anderson, Arlene and Blackwell, David and Chickering, Cathy and Boyd, Toni and Horne, Roland and MacKenzie, Matthew and Moore, Joseph and Nickull, Duane and Richard, Stephen and Shevenell, Lisa A.},
+	year = {2013},
+}
+
+@techreport{eia_annual_2021,
+	type = {Technical {Report}},
+	title = {Annual {Energy} {Outlook} 2021 ({AEO2021})},
+	url = {https://www.eia.gov/outlooks/aeo/},
+	abstract = {The Annual Energy Outlook presents an assessment by the U.S. Energy Information Administration of the outlook for energy markets through 2050.},
+	institution = {Government Printing Office},
+	author = {{EIA}},
+	month = feb,
+	year = {2021},
+	note = {U.S. Energy Information Administration
+Publication Title: Annual Energy Outlook
+Volume: 2021},
+}
+
+@misc{eia_eia_2021,
+	title = {{EIA} - {Independent} {Statistics} and {Analysis}},
+	url = {https://www.eia.gov/outlooks/aeo/data/browser/#/?id=16-AEO2020&cases=ref2020&sourcekey=0},
+	urldate = {2021-03-18},
+	author = {{EIA}},
+	year = {2021},
+	note = {U.S. Energy Information Administration},
+	keywords = {EIA data},
+}
+
+@misc{ng_shallow_2017,
+	title = {Shallow {Neural} {Networks} {\textbar} {Activation} {Functions}},
+	shorttitle = {Lecture 3.6},
+	url = {https://www.coursera.org/learn/neural-networks-deep-learning?specialization=deep-learning},
+	author = {Ng, Andrew},
+	year = {2017},
+}
+
+@misc{ng_neural_2011,
+	title = {Neural {Networks} {Learning} {\textbar} {Backpropagation} {Algorithm}},
+	shorttitle = {Lecture 9.2},
+	url = {https://www.coursera.org/learn/machine-learning},
+	author = {Ng, Andrew},
+	year = {2011},
+}
+
+@misc{brownlee_gentle_2019,
+	title = {A {Gentle} {Introduction} to the {Rectified} {Linear} {Unit} ({ReLU})},
+	url = {https://machinelearningmastery.com/rectified-linear-activation-function-for-deep-learning-neural-networks/},
+	abstract = {In a neural network, the activation function is responsible for transforming the summed weighted input from the node into the […]},
+	language = {en-US},
+	urldate = {2021-06-29},
+	journal = {Machine Learning Mastery},
+	author = {Brownlee, Jason},
+	month = jan,
+	year = {2019},
+}
+
+@article{shapley_value_1997,
+	title = {A value for n-person games},
+	volume = {69},
+	journal = {Classics in game theory},
+	author = {Shapley, Lloyd S},
+	year = {1997},
+	note = {Publisher: Princeton Univ Pr},
+}
+
+@misc{lundberg_interpretable_2020,
+	title = {Interpretable {Machine} {Learning} with {XGBoost}},
+	url = {https://towardsdatascience.com/interpretable-machine-learning-with-xgboost-9ec80d148d27},
+	abstract = {This is a story about the danger of interpreting your machine learning model incorrectly, and the value of interpreting it correctly…},
+	language = {en},
+	urldate = {2021-06-28},
+	journal = {Medium},
+	author = {Lundberg, Scott M.},
+	month = oct,
+	year = {2020},
+}
+
+@article{lundberg_consistent_2019,
+	title = {Consistent {Individualized} {Feature} {Attribution} for {Tree} {Ensembles}},
+	url = {http://arxiv.org/abs/1802.03888},
+	abstract = {Interpreting predictions from tree ensemble methods such as gradient boosting machines and random forests is important, yet feature attribution for trees is often heuristic and not individualized for each prediction. Here we show that popular feature attribution methods are inconsistent, meaning they can lower a feature's assigned importance when the true impact of that feature actually increases. This is a fundamental problem that casts doubt on any comparison between features. To address it we turn to recent applications of game theory and develop fast exact tree solutions for SHAP (SHapley Additive exPlanation) values, which are the unique consistent and locally accurate attribution values. We then extend SHAP values to interaction effects and define SHAP interaction values. We propose a rich visualization of individualized feature attributions that improves over classic attribution summaries and partial dependence plots, and a unique "supervised" clustering (clustering based on feature attributions). We demonstrate better agreement with human intuition through a user study, exponential improvements in run time, improved clustering performance, and better identification of influential features. An implementation of our algorithm has also been merged into XGBoost and LightGBM, see http://github.com/slundberg/shap for details.},
+	urldate = {2021-06-28},
+	journal = {arXiv:1802.03888 [cs, stat]},
+	author = {Lundberg, Scott M. and Erion, Gabriel G. and Lee, Su-In},
+	month = mar,
+	year = {2019},
+	note = {arXiv: 1802.03888},
+	keywords = {Computer Science - Machine Learning, Statistics - Machine Learning},
+}
+
+@article{lundberg_unified_2017,
+	title = {A {Unified} {Approach} to {Interpreting} {Model} {Predictions}},
+	volume = {30},
+	url = {https://proceedings.neurips.cc/paper/2017/hash/8a20a8621978632d76c43dfd28b67767-Abstract.html},
+	language = {en},
+	urldate = {2021-06-28},
+	journal = {Advances in Neural Information Processing Systems},
+	author = {Lundberg, Scott M. and Lee, Su-In},
+	year = {2017},
+}
+
 @misc{xgboost_developers_xgboost_2020,
 	title = {{XGBoost} {Parameters} — xgboost 1.5.0-dev documentation},
 	url = {https://xgboost.readthedocs.io/en/latest/parameter.html},
@@ -1090,18 +1212,6 @@ This database consists of five major Arc/Info GIS datasets for each state;
 	institution = {Southern Methodist University Geothermal Laboratory, Dallas, TX (United States)},
 	author = {Blackwell, David and Richards, Maria and Frone, Zachary and Batir, Joe and Ruzo, Andrés and Dingwall, Ryan and Williams, Mitchell},
 	year = {2011},
-}
-
-@techreport{anderson_national_2013,
-	title = {{NATIONAL} {GEOTHERMAL} {DATA} {SYSTEM} ({NGDS}) {GEOTHERMAL} {DATA} {DOMAIN}: {ASSESSMENT} {OF} {GEOTHERMAL} {COMMUNITY} {DATA} {NEEDS}},
-	shorttitle = {{NATIONAL} {GEOTHERMAL} {DATA} {SYSTEM} ({NGDS}) {GEOTHERMAL} {DATA} {DOMAIN}},
-	url = {https://www.osti.gov/biblio/1130333},
-	abstract = {The U.S. Department of Energy's Office of Scientific and Technical Information},
-	language = {English},
-	urldate = {2021-06-04},
-	institution = {Boise State Univ., ID (United States)},
-	author = {Anderson, Arlene and Blackwell, David and Chickering, Cathy and Boyd, Toni and Horne, Roland and MacKenzie, Matthew and Moore, Joseph and Nickull, Duane and Richard, Stephen and Shevenell, Lisa A.},
-	year = {2013},
 }
 
 @techreport{blackwell_geothermal_2000,
@@ -2206,31 +2316,6 @@ Publication Title: Annual Technology Baseline},
 	year = {2021},
 }
 
-@techreport{us_energy_information_administration_international_2020,
-	title = {International {Energy} {Outlook} 2020 ({IEO2020})},
-	url = {https://www.eia.gov/outlooks/ieo/},
-	abstract = {Most economic growth happens in non-OECD countries, where GDP per person nearly triples from 2018 to 2050 Most energy-intensive manufacturing shifts to non-OECD Asia and, increasingly, to India The industrial sector is the largest consumer of energy, and energy-intensive manufacturing is the largest component in the sector Manufacturing centers are shifting toward Africa and South Asia, especially India, resulting in energy consumption growth Energy-intensive manufacturing gross output 1 by region share End-use energy consumption by sector quadrillion British thermal units Energy consumption by industrial subsector quadrillion British thermal units Average annual percentage change in GDP (gross domestic product), 2018-2050 percentage per year 0\% 25\% 50\% 75\%},
-	institution = {Government Printing Office},
-	author = {{US Energy Information Administration}},
-	year = {2020},
-	note = {Publication Title: International Energy Outlook
-Volume: 2020},
-	pages = {1--7},
-}
-
-@techreport{us_energy_information_administration_annual_2021,
-	type = {Technical {Report}},
-	title = {Annual {Energy} {Outlook} 2021 ({AEO2021})},
-	url = {https://www.eia.gov/outlooks/aeo/},
-	abstract = {The Annual Energy Outlook presents an assessment by the U.S. Energy Information Administration of the outlook for energy markets through 2050.},
-	institution = {Government Printing Office},
-	author = {{U.S. Energy Information Administration}},
-	month = feb,
-	year = {2021},
-	note = {Publication Title: Annual Energy Outlook
-Volume: 2021},
-}
-
 @article{petty_technology_nodate,
 	title = {Technology {Needs} for {SuperHot} {EGS} {Development}},
 	language = {en},
@@ -3073,15 +3158,6 @@ SOCIAL:
 	author = {{Johnny Carson}},
 	month = mar,
 	year = {2021},
-}
-
-@misc{us_energy_information_administration_eia_2021,
-	title = {{EIA} - {Independent} {Statistics} and {Analysis}},
-	url = {https://www.eia.gov/outlooks/aeo/data/browser/#/?id=16-AEO2020&cases=ref2020&sourcekey=0},
-	urldate = {2021-03-18},
-	author = {{U.S. Energy Information Administration}},
-	year = {2021},
-	keywords = {EIA data},
 }
 
 @book{unfccc_paris_2015,
